fix: 稳定导出来源汇总并防止大小溢出